crates/pack/tests/compile_fail/fact_construction_blocked.stderr
warning: unused import: `FactPromotionRecord`
 --> tests/compile_fail/fact_construction_blocked.rs:4:46
  |
4 | use converge_pack::{ContextFact, ContextKey, FactPromotionRecord};
  |                                              ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unreachable expression
  --> tests/compile_fail/fact_construction_blocked.rs:13:21
   |
12 |         promotion_record: todo!(),
   |                           ------- any code following this expression is unreachable
13 |         created_at: "2026-01-01T00:00:00Z".into(),
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable expression
   |
   = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0451]: fields `key`, `id`, `content`, `promotion_record` and `created_at` of struct `ContextFact` are private
  --> tests/compile_fail/fact_construction_blocked.rs:9:9
   |
 8 |     let _fact = ContextFact {
   |                 ----------- in this type
 9 |         key: ContextKey::Seeds,
   |         ^^^ private field
10 |         id: "forged-fact".into(),
   |         ^^ private field
11 |         content: "bypassed governance".into(),
   |         ^^^^^^^ private field
12 |         promotion_record: todo!(),
   |         ^^^^^^^^^^^^^^^^ private field
13 |         created_at: "2026-01-01T00:00:00Z".into(),
   |         ^^^^^^^^^^ private field
